<resources>
    <string name="app_name">ApiDemo</string>
    <string name="full_name" translatable="false">Full name</string>
    <string name="email" translatable="false">Email</string>
    <string name="device_type" translatable="false">Device Type</string>
    <string name="address" translatable="false">Address</string>
    <string name="search" translatable="false">Search</string>
    <string name="userid" translatable="false">UserId</string>
    <string name="comment_content" translatable="false">Comment Content</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="forword" translatable="false">Forword</string>
    <string name="back">Back</string>
    <string name="create_event">Create Event</string>
    <string name="color">Color</string>
    <string name="team_event">Team Event</string>
    <string name="school_event">School event</string>
    <string name="end_time">End time</string>
    <string name="start_time">Start time</string>
    <string name="event_name">Event name</string>
    <string name="fill_event_information">Fill event information</string>
    <string name="admin_competition">Admin Competition</string>
    <string name="event_description">Event Description</string>
    <string name="event_title">Event Title</string>
    <string name="event_type">Event Type</string>
    <string name="friends">Friends</string>
    <string name="friend_email">Friend email</string>
    <string name="friend_name">Friend name</string>
    <string name="own_team_event">Own Team Event</string>
    <string name="own_school_event">Own School event</string>
</resources>