<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".Team.CreateEventActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/eventList"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_above="@id/createNewEvent"
        android:layout_marginBottom="10dp" />

    <RelativeLayout
        android:id="@+id/CreateEventRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/fill_event_information"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_EventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="80dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_shape"
            android:hint="@string/event_name"
            android:padding="8dp" />

        <EditText
            android:id="@+id/et_EventDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_EventTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:autofillHints="no"
            android:background="@drawable/edittext_shape"
            android:hint="@string/event_description"
            android:padding="8dp" />

        <Button
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_EventDescription"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="100dp"
            android:layout_marginTop="30dp"
            android:text="@string/start_time"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/startTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/end_time"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/endTime"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/schoolEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/school_event"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/teamEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_event"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/selectColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/endTime"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_toEndOf="@id/linearLayout"
            android:text="@string/color"
            android:textAllCaps="false"
            android:textColor="@color/white" />


        <Button
            android:id="@+id/createEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:text="Create Event"
            android:textColor="@color/white" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/createNewEvent"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:background="@drawable/round_shape_white"
        android:padding="10dp"
        android:src="@drawable/ic_event" />

</RelativeLayout>