<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/userInfoImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/user_item_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/userInfoImage"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/full_name"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="13sp"
            android:id="@+id/user_item_email"
            android:layout_below="@id/user_item_fullname"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_type"
            android:id="@+id/user_item_device"
            android:textSize="13sp"
            android:layout_below="@id/user_item_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:id="@+id/user_item_addess"
            android:text="@string/address"
            android:layout_below="@id/user_item_device"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>