<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/friendListItemLayout"
        android:layout_margin="10dp"
        android:visibility="gone"
        android:background="@drawable/edittext_shape">

        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="17sp"
            android:text="@string/friend_name"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/friendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/friendName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/friend_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:textColor="@color/black"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/eventListItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_shape"
        android:visibility="visible">

        <TextView
            android:id="@+id/getEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/event_title" />

        <TextView
            android:id="@+id/getEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/getEventName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/event_description" />

        <TextView
            android:id="@+id/getEventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/event_type"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/getEventDescription"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/getEventStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Time" />

            <TextView
                android:id="@+id/getEventEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="End Time" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>