<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_shape"
        android:visibility="visible">

        <TextView
            android:id="@+id/getOwnEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/event_title" />

        <TextView
            android:id="@+id/getTeamEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/getOwnEventName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/event_description" />

        <TextView
            android:id="@+id/getOwnEventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/event_type"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/getTeamEventDescription"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/getOwnEventStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start Time" />

            <TextView
                android:id="@+id/getOwnEventEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="End Time" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>